<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Здравствуйте"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_xxlarge"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/home_subtitle"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_title" />

        <TextView
            android:id="@+id/daily_meditation_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/daily_meditation"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_subtitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/daily_meditation_card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_marginTop="@dimen/spacing_medium"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="@dimen/radius_medium"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/daily_meditation_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/daily_meditation_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Утренняя медитация для энергии"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_large"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/daily_meditation_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="10 минут"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/daily_meditation_name" />

                <Button
                    android:id="@+id/start_meditation_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/meditation_start"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/recommended_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/recommended"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daily_meditation_card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommended_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/recommended_title" />

        <TextView
            android:id="@+id/categories_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/categories"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recommended_recycler" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_large"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/categories_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>